--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   app-dev:
+    image: madebymode/chronos:dev
     build:
       context: .
       dockerfile: Dockerfile-dev
